prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__aggregation.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/aggregation.prql
---
Tokens(
    [
        0..0: Start,
        0..12: Comment(" mysql:skip"),
        12..13: NewLine,
        13..30: Comment(" clickhouse:skip"),
        30..31: NewLine,
        31..35: Ident("from"),
        36..42: Ident("tracks"),
        42..43: NewLine,
        43..49: Ident("filter"),
        50..58: Ident("genre_id"),
        59..61: Eq,
        62..65: Literal(Integer(100)),
        65..66: NewLine,
        66..72: Ident("derive"),
        73..83: Ident("empty_name"),
        84..85: Control('='),
        86..90: Ident("name"),
        91..93: Eq,
        94..96: Literal(String("")),
        96..97: NewLine,
        97..106: Ident("aggregate"),
        107..108: Control('{'),
        108..111: Ident("sum"),
        112..120: Ident("track_id"),
        120..121: Control(','),
        122..134: Ident("concat_array"),
        135..139: Ident("name"),
        139..140: Control(','),
        141..144: Ident("all"),
        145..155: Ident("empty_name"),
        155..156: Control(','),
        157..160: Ident("any"),
        161..171: Ident("empty_name"),
        171..172: Control('}'),
        172..173: NewLine,
    ],
)
