prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_cte_complex.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_cte_complex.prql
snapshot_kind: text
---
Tokens(
    [
        0..0: Start,
        0..4: Keyword("prql"),
        5..11: Ident("target"),
        11..12: Control(':'),
        12..15: Ident("sql"),
        15..16: Control('.'),
        16..24: Ident("postgres"),
        24..25: NewLine,
        25..26: NewLine,
        26..29: Keyword("let"),
        30..43: Ident("invoices_wrap"),
        44..45: Control('='),
        46..47: Control('('),
        47..48: NewLine,
        50..54: Ident("from"),
        55..63: Ident("invoices"),
        63..64: NewLine,
        66..72: Ident("select"),
        73..74: Control('{'),
        75..85: Ident("invoice_id"),
        85..86: Control(','),
        87..102: Ident("billing_country"),
        103..104: Control('}'),
        104..105: NewLine,
        105..106: Control(')'),
        106..107: NewLine,
        107..108: NewLine,
        108..111: Keyword("let"),
        112..126: Ident("employees_wrap"),
        127..128: Control('='),
        129..130: Control('('),
        130..131: NewLine,
        133..137: Ident("from"),
        138..147: Ident("employees"),
        147..148: NewLine,
        150..156: Ident("select"),
        157..158: Control('{'),
        159..170: Ident("employee_id"),
        170..171: Control(','),
        172..179: Ident("country"),
        180..181: Control('}'),
        181..182: NewLine,
        182..183: Control(')'),
        183..184: NewLine,
        184..185: NewLine,
        185..188: Keyword("let"),
        189..203: Ident("invoices_final"),
        204..205: Control('='),
        206..207: Control('('),
        207..208: NewLine,
        210..214: Ident("from"),
        215..228: Ident("invoices_wrap"),
        228..229: NewLine,
        231..237: Ident("select"),
        238..239: Control('{'),
        240..250: Ident("invoice_id"),
        250..251: Control(','),
        252..267: Ident("billing_country"),
        268..269: Control('}'),
        269..270: NewLine,
        272..278: Ident("derive"),
        279..280: Control('{'),
        281..287: Ident("source"),
        288..289: Control('='),
        290..324: Interpolation('f', "{billing_country} from invoices"),
        325..326: Control('}'),
        326..327: NewLine,
        327..328: Control(')'),
        328..329: NewLine,
        329..330: NewLine,
        330..333: Keyword("let"),
        334..349: Ident("employees_final"),
        350..351: Control('='),
        352..353: Control('('),
        353..354: NewLine,
        356..360: Ident("from"),
        361..375: Ident("employees_wrap"),
        375..376: NewLine,
        378..384: Ident("select"),
        385..386: Control('{'),
        387..398: Ident("employee_id"),
        398..399: Control(','),
        400..407: Ident("country"),
        408..409: Control('}'),
        409..410: NewLine,
        412..418: Ident("derive"),
        419..420: Control('{'),
        421..427: Ident("source"),
        428..429: Control('='),
        430..457: Interpolation('f', "{country} from employees"),
        458..459: Control('}'),
        459..460: NewLine,
        460..461: Control(')'),
        461..462: NewLine,
        462..463: NewLine,
        463..467: Ident("from"),
        468..482: Ident("invoices_final"),
        482..483: NewLine,
        483..489: Ident("append"),
        490..505: Ident("employees_final"),
        505..506: NewLine,
    ],
)
