prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_group.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_group.prql
---
Tokens(
    [
        0..0: Start,
        0..4: Ident("from"),
        5..13: Ident("invoices"),
        13..14: NewLine,
        14..20: Ident("select"),
        21..22: Control('{'),
        23..35: Ident("invoice_date"),
        35..36: Control(','),
        37..47: Ident("invoice_id"),
        47..48: Control(','),
        49..60: Ident("customer_id"),
        61..62: Control('}'),
        62..63: NewLine,
        63..69: Ident("append"),
        70..71: Control('('),
        71..72: NewLine,
        74..78: Ident("from"),
        79..87: Ident("invoices"),
        87..88: NewLine,
        90..96: Ident("select"),
        97..98: Control('{'),
        99..111: Ident("invoice_date"),
        111..112: Control(','),
        113..123: Ident("invoice_id"),
        123..124: Control(','),
        125..136: Ident("customer_id"),
        137..138: Control('}'),
        138..139: NewLine,
        139..140: Control(')'),
        140..141: NewLine,
        141..146: Ident("group"),
        147..148: Control('{'),
        149..160: Ident("customer_id"),
        161..162: Control('}'),
        163..164: Control('('),
        164..173: Ident("aggregate"),
        174..175: Control('{'),
        176..181: Ident("count"),
        182..183: Control('='),
        184..189: Ident("count"),
        190..200: Ident("invoice_id"),
        200..201: Control(','),
        202..214: Ident("invoice_date"),
        215..216: Control('}'),
        216..217: Control(')'),
        217..218: NewLine,
    ],
)
