prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select.longform.prql
---
Tokens(
    [
        0..0: Start,
        0..13: Comment(" duckdb:skip"),
        13..14: NewLine,
        14..29: Comment(" postgres:skip"),
        29..30: NewLine,
        30..31: NewLine,
        31..35: Ident("from"),
        36..44: Ident("invoices"),
        44..45: NewLine,
        45..51: Ident("select"),
        52..53: Control('{'),
        54..65: Ident("customer_id"),
        65..66: Control(','),
        67..77: Ident("invoice_id"),
        77..78: Control(','),
        79..94: Ident("billing_country"),
        95..96: Control('}'),
        96..97: NewLine,
        97..101: Ident("take"),
        102..104: Literal(Integer(10)),
        104..106: Range { bind_left: true, bind_right: true },
        106..108: Literal(Integer(15)),
        108..109: NewLine,
        109..115: Ident("append"),
        116..117: Control('('),
        117..118: NewLine,
        120..124: Ident("from"),
        125..133: Ident("invoices"),
        133..134: NewLine,
        136..142: Ident("select"),
        143..144: Control('{'),
        145..156: Ident("customer_id"),
        156..157: Control(','),
        158..168: Ident("invoice_id"),
        168..169: Control(','),
        170..185: Ident("billing_country"),
        186..187: Control('}'),
        187..188: NewLine,
        190..194: Ident("take"),
        195..197: Literal(Integer(40)),
        197..199: Range { bind_left: true, bind_right: true },
        199..201: Literal(Integer(45)),
        201..202: NewLine,
        202..203: Control(')'),
        203..204: NewLine,
        204..210: Ident("select"),
        211..212: Control('{'),
        213..228: Ident("billing_country"),
        228..229: Control(','),
        230..240: Ident("invoice_id"),
        241..242: Control('}'),
        242..243: NewLine,
    ],
)
