prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select.shortform.prql
---
Tokens(
    [
        0..0: Start,
        0..17: Comment(" clickhouse:skip"),
        17..18: NewLine,
        18..32: Comment(" glaredb:skip"),
        32..33: NewLine,
        33..46: Comment(" sqlite:skip"),
        46..47: NewLine,
        47..59: Comment(" mysql:skip"),
        59..60: NewLine,
        60..61: NewLine,
        61..74: Comment(" duckdb:test"),
        74..75: NewLine,
        75..90: Comment(" postgres:test"),
        90..91: NewLine,
        91..92: NewLine,
        92..116: Comment(" default-dialect:duckdb"),
        116..117: NewLine,
        117..118: NewLine,
        118..122: Ident("from"),
        123..131: Ident("invoices"),
        131..132: NewLine,
        132..138: Ident("select"),
        139..140: Control('{'),
        141..152: Ident("customer_id"),
        152..153: Control(','),
        154..164: Ident("invoice_id"),
        164..165: Control(','),
        166..181: Ident("billing_country"),
        182..183: Control('}'),
        183..184: NewLine,
        184..188: Ident("take"),
        189..191: Literal(Integer(10)),
        191..193: Range { bind_left: true, bind_right: true },
        193..195: Literal(Integer(15)),
        195..196: NewLine,
        196..202: Ident("append"),
        203..204: Control('('),
        204..205: NewLine,
        207..211: Ident("from"),
        212..220: Ident("invoices"),
        220..221: NewLine,
        223..229: Ident("select"),
        230..231: Control('{'),
        232..243: Ident("customer_id"),
        243..244: Control(','),
        245..255: Ident("invoice_id"),
        255..256: Control(','),
        257..272: Ident("billing_country"),
        273..274: Control('}'),
        274..275: NewLine,
        277..281: Ident("take"),
        282..284: Literal(Integer(40)),
        284..286: Range { bind_left: true, bind_right: true },
        286..288: Literal(Integer(45)),
        288..289: NewLine,
        289..290: Control(')'),
        290..291: NewLine,
        291..297: Ident("select"),
        298..299: Control('{'),
        300..315: Ident("billing_country"),
        315..316: Control(','),
        317..327: Ident("invoice_id"),
        328..329: Control('}'),
        329..330: NewLine,
    ],
)
