prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_compute.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.longform.prql
---
Tokens(
    [
        0..0: Start,
        0..13: Comment(" duckdb:skip"),
        13..14: NewLine,
        14..29: Comment(" postgres:skip"),
        29..30: NewLine,
        30..31: NewLine,
        31..35: Ident("from"),
        36..44: Ident("invoices"),
        44..45: NewLine,
        45..51: Ident("select"),
        52..53: Control('{'),
        54..65: Ident("customer_id"),
        65..66: Control(','),
        67..77: Ident("invoice_id"),
        77..78: Control(','),
        79..84: Ident("total"),
        85..86: Control('}'),
        86..87: NewLine,
        87..91: Ident("take"),
        92..93: Literal(Integer(5)),
        93..94: NewLine,
        94..100: Ident("append"),
        101..102: Control('('),
        102..103: NewLine,
        105..109: Ident("from"),
        110..123: Ident("invoice_items"),
        123..124: NewLine,
        126..132: Ident("select"),
        133..134: Control('{'),
        135..150: Ident("invoice_line_id"),
        150..151: Control(','),
        152..162: Ident("invoice_id"),
        162..163: Control(','),
        164..174: Ident("unit_price"),
        175..176: Control('}'),
        176..177: NewLine,
        179..183: Ident("take"),
        184..185: Literal(Integer(5)),
        185..186: NewLine,
        186..187: Control(')'),
        187..188: NewLine,
        188..194: Ident("select"),
        195..196: Control('{'),
        197..198: Ident("a"),
        199..200: Control('='),
        201..212: Ident("customer_id"),
        213..214: Control('*'),
        215..216: Literal(Integer(2)),
        216..217: Control(','),
        218..219: Ident("b"),
        220..221: Control('='),
        222..226: Ident("math"),
        226..227: Control('.'),
        227..232: Ident("round"),
        233..234: Literal(Integer(1)),
        235..236: Control('('),
        236..246: Ident("invoice_id"),
        247..248: Control('*'),
        249..254: Ident("total"),
        254..255: Control(')'),
        256..257: Control('}'),
        257..258: NewLine,
    ],
)
