prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_compute.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.shortform.prql
---
Tokens(
    [
        0..0: Start,
        0..17: Comment(" clickhouse:skip"),
        17..18: NewLine,
        18..32: Comment(" glaredb:skip"),
        32..33: NewLine,
        33..46: Comment(" sqlite:skip"),
        46..47: NewLine,
        47..59: Comment(" mysql:skip"),
        59..60: NewLine,
        60..61: NewLine,
        61..74: Comment(" duckdb:test"),
        74..75: NewLine,
        75..90: Comment(" postgres:test"),
        90..91: NewLine,
        91..92: NewLine,
        92..116: Comment(" default-dialect:duckdb"),
        116..117: NewLine,
        117..118: NewLine,
        118..122: Ident("from"),
        123..131: Ident("invoices"),
        131..132: NewLine,
        132..138: Ident("select"),
        139..140: Control('{'),
        141..152: Ident("customer_id"),
        152..153: Control(','),
        154..164: Ident("invoice_id"),
        164..165: Control(','),
        166..171: Ident("total"),
        172..173: Control('}'),
        173..174: NewLine,
        174..178: Ident("take"),
        179..180: Literal(Integer(5)),
        180..181: NewLine,
        181..187: Ident("append"),
        188..189: Control('('),
        189..190: NewLine,
        192..196: Ident("from"),
        197..210: Ident("invoice_items"),
        210..211: NewLine,
        213..219: Ident("select"),
        220..221: Control('{'),
        222..237: Ident("invoice_line_id"),
        237..238: Control(','),
        239..249: Ident("invoice_id"),
        249..250: Control(','),
        251..261: Ident("unit_price"),
        262..263: Control('}'),
        263..264: NewLine,
        266..270: Ident("take"),
        271..272: Literal(Integer(5)),
        272..273: NewLine,
        273..274: Control(')'),
        274..275: NewLine,
        275..281: Ident("select"),
        282..283: Control('{'),
        284..285: Ident("a"),
        286..287: Control('='),
        288..299: Ident("customer_id"),
        300..301: Control('*'),
        302..303: Literal(Integer(2)),
        303..304: Control(','),
        305..306: Ident("b"),
        307..308: Control('='),
        309..313: Ident("math"),
        313..314: Control('.'),
        314..319: Ident("round"),
        320..321: Literal(Integer(1)),
        322..323: Control('('),
        323..333: Ident("invoice_id"),
        334..335: Control('*'),
        336..341: Ident("total"),
        341..342: Control(')'),
        343..344: Control('}'),
        344..345: NewLine,
    ],
)
