prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_compute.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.prql
---
Tokens(
    [
        0..0: Start,
        0..4: Ident("from"),
        5..13: Ident("invoices"),
        13..14: NewLine,
        14..20: Ident("select"),
        21..22: Control('{'),
        23..34: Ident("customer_id"),
        34..35: Control(','),
        36..46: Ident("invoice_id"),
        46..47: Control(','),
        48..53: Ident("total"),
        54..55: Control('}'),
        55..56: NewLine,
        56..60: Ident("take"),
        61..62: Literal(Integer(5)),
        62..63: NewLine,
        63..69: Ident("append"),
        70..71: Control('('),
        71..72: NewLine,
        74..78: Ident("from"),
        79..92: Ident("invoice_items"),
        92..93: NewLine,
        95..101: Ident("select"),
        102..103: Control('{'),
        104..119: Ident("invoice_line_id"),
        119..120: Control(','),
        121..131: Ident("invoice_id"),
        131..132: Control(','),
        133..143: Ident("unit_price"),
        144..145: Control('}'),
        145..146: NewLine,
        148..152: Ident("take"),
        153..154: Literal(Integer(5)),
        154..155: NewLine,
        155..156: Control(')'),
        156..157: NewLine,
        157..163: Ident("select"),
        164..165: Control('{'),
        166..167: Ident("a"),
        168..169: Control('='),
        170..181: Ident("customer_id"),
        182..183: Control('*'),
        184..185: Literal(Integer(2)),
        185..186: Control(','),
        187..188: Ident("b"),
        189..190: Control('='),
        191..195: Ident("math"),
        195..196: Control('.'),
        196..201: Ident("round"),
        202..203: Literal(Integer(1)),
        204..205: Control('('),
        205..215: Ident("invoice_id"),
        216..217: Control('*'),
        218..223: Ident("total"),
        223..224: Control(')'),
        225..226: Control('}'),
        226..227: NewLine,
    ],
)
