prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_multiple.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple.prql
---
Tokens(
    [
        0..0: Start,
        0..4: Ident("from"),
        5..13: Ident("invoices"),
        13..14: NewLine,
        14..20: Ident("select"),
        21..22: Control('{'),
        23..34: Ident("customer_id"),
        34..35: Control(','),
        36..46: Ident("invoice_id"),
        46..47: Control(','),
        48..53: Ident("total"),
        53..54: Control(','),
        55..63: Ident("useless1"),
        63..64: Control(','),
        65..73: Ident("useless2"),
        74..75: Control('}'),
        75..76: NewLine,
        76..80: Ident("take"),
        81..82: Literal(Integer(5)),
        82..83: NewLine,
        83..89: Ident("append"),
        90..91: Control('('),
        91..92: NewLine,
        94..98: Ident("from"),
        99..108: Ident("employees"),
        108..109: NewLine,
        111..117: Ident("select"),
        118..119: Control('{'),
        120..131: Ident("employee_id"),
        131..132: Control(','),
        133..144: Ident("employee_id"),
        145..146: Control('+'),
        147..148: Literal(Integer(1)),
        148..149: Control(','),
        150..160: Ident("reports_to"),
        160..161: Control(','),
        162..170: Ident("useless3"),
        170..171: Control(','),
        172..180: Ident("useless4"),
        181..182: Control('}'),
        182..183: NewLine,
        185..189: Ident("take"),
        190..191: Literal(Integer(5)),
        191..192: NewLine,
        192..193: Control(')'),
        193..194: NewLine,
        194..199: Ident("group"),
        200..201: Control('{'),
        202..213: Ident("customer_id"),
        214..215: Control('}'),
        216..217: Control('('),
        217..226: Ident("aggregate"),
        227..228: Control('{'),
        229..239: Ident("invoice_id"),
        240..241: Control('='),
        242..246: Ident("math"),
        246..247: Control('.'),
        247..252: Ident("round"),
        253..254: Literal(Integer(1)),
        255..256: Control('('),
        256..259: Ident("sum"),
        260..270: Ident("invoice_id"),
        270..271: Control(')'),
        271..272: Control(','),
        273..278: Ident("total"),
        279..280: Control('='),
        281..285: Ident("math"),
        285..286: Control('.'),
        286..291: Ident("round"),
        292..293: Literal(Integer(1)),
        294..295: Control('('),
        295..298: Ident("sum"),
        299..304: Ident("total"),
        304..305: Control(')'),
        305..306: Control(','),
        307..315: Ident("useless1"),
        316..317: Control('='),
        318..321: Ident("sum"),
        322..330: Ident("useless1"),
        331..332: Control('}'),
        332..333: Control(')'),
        333..334: NewLine,
        334..340: Ident("append"),
        341..342: Control('('),
        342..343: NewLine,
        345..349: Ident("from"),
        350..363: Ident("invoice_items"),
        363..364: NewLine,
        366..372: Ident("select"),
        373..374: Control('{'),
        375..385: Ident("invoice_id"),
        385..386: Control(','),
        387..402: Ident("invoice_line_id"),
        402..403: Control(','),
        404..405: Literal(Integer(0)),
        405..406: Control(','),
        407..415: Ident("useless5"),
        416..417: Control('}'),
        417..418: NewLine,
        420..424: Ident("take"),
        425..426: Literal(Integer(5)),
        426..427: NewLine,
        427..428: Control(')'),
        428..429: NewLine,
        429..433: Ident("sort"),
        434..435: Control('{'),
        436..437: Control('+'),
        437..447: Ident("invoice_id"),
        447..448: Control(','),
        449..450: Control('+'),
        450..455: Ident("total"),
        456..457: Control('}'),
        457..458: NewLine,
        458..464: Ident("select"),
        465..466: Control('{'),
        467..472: Ident("total"),
        472..473: Control(','),
        474..484: Ident("invoice_id"),
        485..486: Control('}'),
        486..487: NewLine,
        487..488: NewLine,
        488..501: Comment(" sqlite:skip"),
        501..502: NewLine,
    ],
)
