prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_multiple_with_null.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.longform.prql
---
Tokens(
    [
        0..0: Start,
        0..13: Comment(" duckdb:skip"),
        13..14: NewLine,
        14..29: Comment(" postgres:skip"),
        29..30: NewLine,
        30..31: NewLine,
        31..35: Ident("from"),
        36..44: Ident("invoices"),
        44..45: NewLine,
        45..51: Ident("select"),
        52..53: Control('{'),
        54..65: Ident("customer_id"),
        65..66: Control(','),
        67..77: Ident("invoice_id"),
        77..78: Control(','),
        79..94: Ident("billing_country"),
        95..96: Control('}'),
        96..97: NewLine,
        97..101: Ident("take"),
        102..103: Literal(Integer(5)),
        103..104: NewLine,
        104..110: Ident("append"),
        111..112: Control('('),
        112..113: NewLine,
        115..119: Ident("from"),
        120..129: Ident("employees"),
        129..130: NewLine,
        132..138: Ident("select"),
        139..140: Control('{'),
        141..152: Ident("employee_id"),
        152..153: Control(','),
        154..165: Ident("employee_id"),
        165..166: Control(','),
        167..174: Ident("country"),
        175..176: Control('}'),
        176..177: NewLine,
        179..183: Ident("take"),
        184..185: Literal(Integer(5)),
        185..186: NewLine,
        186..187: Control(')'),
        187..188: NewLine,
        188..194: Ident("append"),
        195..196: Control('('),
        196..197: NewLine,
        199..203: Ident("from"),
        204..217: Ident("invoice_items"),
        217..218: NewLine,
        220..226: Ident("select"),
        227..228: Control('{'),
        229..244: Ident("invoice_line_id"),
        244..245: Control(','),
        246..256: Ident("invoice_id"),
        256..257: Control(','),
        258..262: Literal(Null),
        263..264: Control('}'),
        264..265: NewLine,
        267..271: Ident("take"),
        272..273: Literal(Integer(5)),
        273..274: NewLine,
        274..275: Control(')'),
        275..276: NewLine,
        276..282: Ident("select"),
        283..284: Control('{'),
        285..300: Ident("billing_country"),
        300..301: Control(','),
        302..312: Ident("invoice_id"),
        313..314: Control('}'),
        314..315: NewLine,
    ],
)
