prqlc/prqlc/tests/integration/snapshots/integration__queries__lex__append_select_multiple_with_null.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: tokens
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.shortform.prql
---
Tokens(
    [
        0..0: Start,
        0..17: Comment(" clickhouse:skip"),
        17..18: NewLine,
        18..32: Comment(" glaredb:skip"),
        32..33: NewLine,
        33..46: Comment(" sqlite:skip"),
        46..47: NewLine,
        47..59: Comment(" mysql:skip"),
        59..60: NewLine,
        60..61: NewLine,
        61..74: Comment(" duckdb:test"),
        74..75: NewLine,
        75..90: Comment(" postgres:test"),
        90..91: NewLine,
        91..92: NewLine,
        92..116: Comment(" default-dialect:duckdb"),
        116..117: NewLine,
        117..118: NewLine,
        118..122: Ident("from"),
        123..131: Ident("invoices"),
        131..132: NewLine,
        132..138: Ident("select"),
        139..140: Control('{'),
        141..152: Ident("customer_id"),
        152..153: Control(','),
        154..164: Ident("invoice_id"),
        164..165: Control(','),
        166..181: Ident("billing_country"),
        182..183: Control('}'),
        183..184: NewLine,
        184..188: Ident("take"),
        189..190: Literal(Integer(5)),
        190..191: NewLine,
        191..197: Ident("append"),
        198..199: Control('('),
        199..200: NewLine,
        202..206: Ident("from"),
        207..216: Ident("employees"),
        216..217: NewLine,
        219..225: Ident("select"),
        226..227: Control('{'),
        228..239: Ident("employee_id"),
        239..240: Control(','),
        241..252: Ident("employee_id"),
        252..253: Control(','),
        254..261: Ident("country"),
        262..263: Control('}'),
        263..264: NewLine,
        266..270: Ident("take"),
        271..272: Literal(Integer(5)),
        272..273: NewLine,
        273..274: Control(')'),
        274..275: NewLine,
        275..281: Ident("append"),
        282..283: Control('('),
        283..284: NewLine,
        286..290: Ident("from"),
        291..304: Ident("invoice_items"),
        304..305: NewLine,
        307..313: Ident("select"),
        314..315: Control('{'),
        316..331: Ident("invoice_line_id"),
        331..332: Control(','),
        333..343: Ident("invoice_id"),
        343..344: Control(','),
        345..349: Literal(Null),
        350..351: Control('}'),
        351..352: NewLine,
        354..358: Ident("take"),
        359..360: Literal(Integer(5)),
        360..361: NewLine,
        361..362: Control(')'),
        362..363: NewLine,
        363..369: Ident("select"),
        370..371: Control('{'),
        372..387: Ident("billing_country"),
        387..388: Control(','),
        389..399: Ident("invoice_id"),
        400..401: Control('}'),
        401..402: NewLine,
    ],
)
